# test_framework

./: .env.example  Project Structure  README.md  about_venv.md  gitignore  pyproject.toml  source_file.md
config/: __init__.py  settings.py  test_data.json
features/: __init__.py  environment.py  login.feature  navigation.feature
features/steps/: __init__.py  common_steps.py  login_steps.py  navigation_steps.py
features/support/: __init__.py  browser_manager.py  config.py  helpers.py
features/support/page_objects/: __init__.py  base_page.py  dashboard_page.py  login_page.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
